--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body {
 }
 
 .hero {
-  background: url(https://js.cx/drag-heroes/heroes.png);
-  width: 130px;
-  height: 128px;
+  width: 150px;
+  height: 150px;
   float: left;
 }
 
@@ -16,15 +15,18 @@ body {
 }
 
 .circle {
+  background-size: cover;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/DOGECOIN.png/800px-DOGECOIN.png");
   border-radius: 50%;
-  background-color: red;
+  background-color: gold;
   position: absolute;
-  /* width: 200px;
-  height: 200px; */
 }
 
 .square {
+  background-size: cover;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Taka_Shiba.jpg/1200px-Taka_Shiba.jpg");
   background-color: blue;
+  background-position: center;
   width: 200px;
   height: 200px;
   top: 50vh;
@@ -35,19 +37,19 @@ body {
   display: grid;
   width: 100vw;
   height: 100vh;
-  /* grid-template-columns: 2fr 8fr; */
-  grid-template: 20vh 80vh / 20vw 80vw;
+  grid-template: 5vh 95vh / 20vw 80vw;
 }
 
-.figures {
-  background-color: blue;
-}
-
+.figures,
 .canvas {
-  background-color: red;
+  padding-left: 10px;
+  border: 1px solid #00695c;
+  background-color: #80cbc4;
+  font-size: 1.6rem;
 }
 
 .figuresContainer {
+  display: flex;
   background-color: goldenrod;
 }
 
@@ -64,7 +66,9 @@ body {
 }
 
 #delete {
+  position: absolute;
   width: 100px;
   height: 50px;
   cursor: pointer;
+  bottom: 0px;
 }
