--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   background-position: center;
   width: 200px;
   height: 200px;
-  top: 50vh;
+  top: 40vh;
   position: absolute;
 }
 
@@ -68,6 +68,14 @@ body {
 #delete {
   position: absolute;
   width: 100px;
+  height: 50px;
+  cursor: pointer;
+  bottom: 50px;
+}
+
+#export {
+  position: absolute;
+  width: 300px;
   height: 50px;
   cursor: pointer;
   bottom: 0px;
