--- a/style.css
+++ b/style.css
@@ -73,18 +73,21 @@ body {
   bottom: 100px;
 }
 
-#export {
-  position: absolute;
-  width: 300px;
-  height: 50px;
-  cursor: pointer;
-  bottom: 50px;
+#import {
+  display: none;
 }
 
-#a {
+.import__label {
   position: absolute;
-  /* width: 100px;
-  height: 50px; */
+  cursor: pointer;
+  bottom: 50px;
+  padding: 5px;
+  border: 1px solid black;
+  background-color: white;
+}
+
+#export {
+  position: absolute;
   cursor: pointer;
   background-color: white;
   color: black;
